--- a/Demo/Podfile
+++ b/Demo/Podfile
@@ -3,5 +3,5 @@ platform :ios, '9.0'
 target 'Demo' do
     inhibit_all_warnings!
     use_modular_headers!
-    pod 'HPBWeb3SDK', :podspec => '/Users/liuxiaoliang/Desktop/HPBWeb3SDKDemo/HPBWeb3SDK.podspec'
+    pod 'HPBWeb3SDK', '~> 1.0.0'
 end
